# nasm

./: archivo.txt  enlazar.sh  ensamblar.sh  hello  hello.asm  run.sh  test  test.asm
learn/01/: main  main.asm
learn/02/: main  main.asm
learn/03/: main  main.asm
learn/experiments/: green  green.asm
learn2/: .loop.asm.kate-swp  CMakeCache.txt  CMakeLists.txt  Makefile  calculator  calculator.asm  calculator.sh  cmake_install.cmake  lea  lea.asm  loop  loop-if  loop-if.asm  loop.asm  my_program  sumar.txt
learn2/01-Hello-World/: main  main.asm  other  other.asm
learn3/: main  main.asm  run.sh
read/: first  first.asm
window/: window  window.asm
